--- a/_includes/default.html
+++ b/_includes/default.html
@@ -100,7 +100,7 @@
 		<footer>
 			<hr/>
 			<p>
-				&copy; {{ site.time | date: '%Y' }} {{ site.author.name }}. Powered by Jekyll, Github Pages, the <a href="https://github.com/dbtek/dbyll">dbyll theme</a> and incompetence.
+				&copy; {{ site.time | date: '%Y' }} {{ site.author.name }}. Powered by Github Pages, Jekyll, the <a href="https://github.com/dbtek/dbyll">dbyll theme</a> and incompetence.
 			</p>
 		</footer>
 	</div>
