--- a/_includes/default.html
+++ b/_includes/default.html
@@ -70,6 +70,7 @@
 				<li class="active"><a href="{{ site.BASE_PATH }}/">Home</a></li>
 				<li><a href="{{ site.BASE_PATH}}/{{ site.categories_path }}">Categories</a></li>
 				<li><a href="{{ site.BASE_PATH}}{{ site.resources_path }}">Resources</a></li>
+				<li><a href="{{ site.BASE_PATH}}{{ site.rss_path }}">RSS Feed</a></li>
 				<!--<li><a href="{{ site.BASE_PATH}}/{{ site.tags_path }}">Tags</a></li>-->
 			</ul>
 		</div><!-- /.navbar-collapse -->
@@ -84,6 +85,7 @@
 			<li><a href="{{ site.BASE_PATH}}/"><i class="fa fa-home"></i>Home</a></li>
 			<li><a href="{{ site.BASE_PATH}}/{{ site.categories_path }}"><i class="fa fa-folder"></i>Categories</a></li>
 			<li><a href="{{ site.BASE_PATH}}{{ site.resources_path }}"><i class="fa fa-folder"></i>Resources</a></li>
+			<li><a href="{{ site.BASE_PATH}}{{ site.rss_path }}"><i class="fa fa-rss"></i>RSS Feed</a></li>
 			<!--<li><a href="{{ site.BASE_PATH}}/{{ site.tags_path }}"><i class="fa fa-tags"></i>Tags</a></li>-->
 			<li class="divider"></li>
 			<li><a href="#"><i class="fa fa-arrow-up"></i>Top of Page</a></li>
