--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,35 @@
 @import url(http://fonts.googleapis.com/css?family=Ubuntu:500&subset=latin,latin-ext);
 
+code.language-console
+{
+    overflow-x: auto;
+    padding: 1em 1em;
+	background: #000080;
+    color: #edeef0;
+	border-radius: 3px;
+	font-family: Consolas, Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono, Bitstream Vera Sans Mono, Courier New, monospace, serif;
+	font-size: 1em;
+    margin-bottom: 1.3em;
+	font-weight: normal;
+	line-height: 1.3em;
+    display: block;
+}
+
+code.language-consoleerror
+{
+    overflow-x: auto;
+    padding: 1em 1em;
+	background: #000080;
+    color: #f00000;
+	border-radius: 3px;
+	font-family: Consolas, Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono, Bitstream Vera Sans Mono, Courier New, monospace, serif;
+	font-size: 1em;
+    margin-bottom: 1.3em;
+	font-weight: normal;
+	line-height: 1.3em;
+    display: block;
+}
+
 body{
 	color: #2c3e50;
 }
