--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,8 +7,7 @@ pre code.language-console
     padding: 1em 1em;
 	background: #000080;
     color: #edeef0;
-	border-radius: 3px;
-	font-size: 1em;
+	font-size: 16px;
     margin-bottom: 1.3em;
 	font-weight: normal;
 	line-height: 1.3em;
@@ -21,8 +20,7 @@ pre code.language-consoleerror
     padding: 1em 1em;
 	background: #000080;
     color: #f00000;
-	border-radius: 3px;
-	font-size: 1em;
+	font-size: 16px;
     margin-bottom: 1.3em;
 	font-weight: normal;
 	line-height: 1.3em;
@@ -33,11 +31,13 @@ pre
 {
 	border: none;
 	background-color: #ffffff;
+	font-size: 16px;
 }
 /* end customizations */
 
 body{
 	color: #2c3e50;
+	font-size: 16px;
 }
 
 .sidebar {
