--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,6 @@
 @import url(http://fonts.googleapis.com/css?family=Ubuntu:500&subset=latin,latin-ext);
-@import url(http://fonts.googleapis.com/css?family=Source Code Pro:500&subset=latin,latin-ext);
-@import url(http://fonts.googleapis.com/css?family=Source Sans Pro:500&subset=latin,latin-ext);
+@import url(http://fonts.googleapis.com/css?family=Source+Code+Pro:500&subset=latin,latin-ext);
+@import url(http://fonts.googleapis.com/css?family=Source+Sans+Pro:500&subset=latin,latin-ext);
 
 /* customizations */
 pre code.language-console
