--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,44 +1,33 @@
-/* customizations */
-pre code.language-console
+code
 {
-    overflow-x: auto;
-    padding: 1em 1em;
-	background: #000080;
-    color: #edeef0;
-	font-family: "Source Code Pro";
-	font-size: 14px;
-    margin-bottom: 1.3em;
-	font-weight: normal;
-	line-height: 1.3em;
-    display: block;
-}
-
-pre code.language-consoleerror
-{
-    overflow-x: auto;
-    padding: 1em 1em;
-	background: #000080;
-    color: #f00000;
-	font-family: "Source Code Pro";
-	font-size: 14px;
-    margin-bottom: 1.3em;
-	font-weight: normal;
-	line-height: 1.3em;
-    display: block;
-}
-
-pre
-{
-	border: none;
-	background-color: #ffffff;
-	font-family: "Source Code Pro";
-	font-size: 14px;
+	font-family: "Source Code Pro","Consolas","Monaco","monospace";
+    background: #f0f2f1;
+    color: #00529b;
+    padding: 1px 5px;
+    border-radius: 3px;
+    border: 1px solid #b4d8ff;
 }
 
 blockquote
 {
-	background-color: #eee;
-	margin: 30px 0px 30px;
+	background: #f9f9f9;
+	border-left: 10px solid #00529b;
+	margin: 1.5em 10px;
+	padding: 0.5em 10px;
+
+}
+
+blockquote:before
+{
+	color: #00529b;
+	font-size: 4em;
+	line-height: 0.1em;
+	vertical-align: -0.4em;
+}
+
+blockquote p
+{
+	display: inline;
 }
 
 h1, h2, h3, h4, h5, h6
