Update image vars and sidebar

--- a/_includes/default.html
+++ b/_includes/default.html
@@ -61,7 +61,7 @@
 			</a>
 			{% endif %}
 			<a class="navbar-brand" href="{{ site.BASE_PATH }}/">
-				<img src="{{ site.BASE PATH}}/assets/media/Matt.png" class="img-circle" />
+				<img src="{{ site.BASE PATH}}{{ site.author.image}}" class="img-circle" />
 				{{ site.title }}
 			</a>
 		</div>
