--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,7 +1,7 @@
 <!-- sidebar.html -->
 <header class="sidebar-header" role="banner">
 	<a href="{{ site.BASE_PATH }}/">
-		<img src="{{ site.BASE PATH}}/assets/media/PowerShellHero150x150.png" class="img-circle" />
+		<img src="{{ site.BASE PATH}}{{ site.sidebar_logo }}" class="img-circle" />
 	</a>
 	<h3 class="title">
         <a href="{{ site.BASE_PATH }}/">{{ site.title }}</a>
