--- a/assets/resources/syntax/syntax.css
+++ b/assets/resources/syntax/syntax.css
@@ -4,7 +4,8 @@ pre.highlight,
     background-color: #012456;
     color: #f5f5f5;
     font-family: "Source Code Pro","Consolas","Menlo","Monaco","Bitstream Vera Sans Mono","monospace";
-    overflow-x: scroll;
+    overflow-x: auto;
+    white-space: pre;
 }
 
 /* console highlight */
