--- a/assets/resources/syntax/syntax.css
+++ b/assets/resources/syntax/syntax.css
@@ -5,10 +5,21 @@ pre.highlight,
     color: #f5f5f5;
     font-family: "Source Code Pro","Consolas","Menlo","Monaco","Bitstream Vera Sans Mono","monospace";
     overflow-x: auto;
-    
 }
 
-pre code {white-space: pre;}
+code		
+{	
+    color: #00529b;		
+    padding: 1px 5px;		
+    border-radius: 3px;		
+    border: 1px solid #b4d8ff;		
+}
+
+pre code
+{
+    display: block;
+    white-space: pre;
+}
 
 .language-posh pre.highlight, .language-posh .highlight pre,
 .language-console pre.highlight, .language-console .highlight pre
