Reduce body text to 15px

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,161 +1,195 @@
 @import 'https://fonts.googleapis.com/css?family=Lato:400,700|Roboto+Slab:300,400';
 @import 'https://fonts.googleapis.com/css?family=Raleway';
-
-blockquote
-{
-	background: #f9f9f9;
-	border-left: 10px solid #00529b;
-	margin: 1.5em 10px;
-	padding: 0.5em 10px;
-
+blockquote {
+    background: #f9f9f9;
+    border-left: 10px solid #00529b;
+    margin: 1.5em 10px;
+    padding: 0.5em 10px;
 }
 
-blockquote:before
-{
-	color: #00529b;
-	font-size: 4em;
-	line-height: 0.1em;
-	vertical-align: -0.4em;
+blockquote:before {
+    color: #00529b;
+    font-size: 4em;
+    line-height: 0.1em;
+    vertical-align: -0.4em;
 }
 
-blockquote p
-{
-	display: inline;
+blockquote p {
+    display: inline;
 }
 
-h1, h2, h3, h4, h5
-{
-	font-family: "Roboto Slab", serif;
-	font-weight: 400;
+h1,
+h2,
+h3,
+h4,
+h5 {
+    font-family: "Roboto Slab", serif;
+    font-weight: 400;
 }
 
-h1 { font-size: 2.2em; }
-h2 { font-size: 1.8em; }
-h3 { font-size: 1.4em; }
-h4 { font-size: 1.2em; }
-h5 { font-size: 1em; }
+h1 {
+    font-size: 2.2em;
+}
 
-body
-{
-	font-family: "Raleway", sans-serif;
-	font-size: 1em;
-	line-height: 1.7em;
-	color: #666666;
-	font-size: 16px;
+h2 {
+    font-size: 1.8em;
+}
+
+h3 {
+    font-size: 1.4em;
+}
+
+h4 {
+    font-size: 1.2em;
+}
+
+h5 {
+    font-size: 1em;
+}
+
+body {
+    font-family: "Raleway", sans-serif;
+    font-size: 1em;
+    line-height: 1.7em;
+    color: black;
+    font-size: 15px;
 }
 
 .sidebar {
-	height: 100%;
-	position: fixed;
-	top: 0px;
-	padding-top: 10%;
-	background-color: #012456;
-	color: #f5f5f5;
+    height: 100%;
+    position: fixed;
+    top: 0px;
+    padding-top: 10%;
+    background-color: #012456;
+    color: #f5f5f5;
 }
 
 .sidebar-header {
-	text-align: center;
-	margin-bottom: 10px;
-}
-.sidebar-header .title{
-	font-family: "Source Code Pro","Consolas","Menlo","Monaco","Bitstream Vera Sans Mono","monospace";
-	font-size: 24px;
-	letter-spacing: 3px;
-	text-transform: uppercase;
+    text-align: center;
+    margin-bottom: 10px;
 }
 
-.sidebar-header .title a{
-	text-decoration: none;
-	color: #fff;
+.sidebar-header .title {
+    font-family: "Source Code Pro", "Consolas", "Menlo", "Monaco", "Bitstream Vera Sans Mono", "monospace";
+    font-size: 24px;
+    letter-spacing: 3px;
+    text-transform: uppercase;
+}
+
+.sidebar-header .title a {
+    text-decoration: none;
+    color: #fff;
 }
 
 a.nav-link {
-	padding-bottom: 5px;
-	padding-top: 7px;
-	color: #aaa;
+    padding-bottom: 5px;
+    padding-top: 7px;
+    color: #aaa;
 }
-a.nav-link i{
-	font-size: 16px;
+
+a.nav-link i {
+    font-size: 15px;
 }
-a.nav-link:hover { color: #777; }
+
+a.nav-link:hover {
+    color: #777;
+}
 
 #bio {
-	font-family: "Source Code Pro","Consolas","Menlo","Monaco","Bitstream Vera Sans Mono","monospace";
-	font-size: 14px;
-	margin: 0 auto;
-	margin-bottom: 10px;
+    font-family: "Source Code Pro", "Consolas", "Menlo", "Monaco", "Bitstream Vera Sans Mono", "monospace";
+    font-size: 14px;
+    margin: 0 auto;
+    margin-bottom: 10px;
 }
 
 #contact-list li .fa,
 article .share .btn {
-	-o-transition:color .2s ease-out, background 1s ease-in;
-  -ms-transition:color .2s ease-out, background 1s ease-in;
-  -moz-transition:color .2s ease-out, background 1s ease-in;
-  -webkit-transition:color .2s ease-out, background 1s ease-in;
-  transition:color .2s ease-out, background 1s ease-in;
+    -o-transition: color .2s ease-out, background 1s ease-in;
+    -ms-transition: color .2s ease-out, background 1s ease-in;
+    -moz-transition: color .2s ease-out, background 1s ease-in;
+    -webkit-transition: color .2s ease-out, background 1s ease-in;
+    transition: color .2s ease-out, background 1s ease-in;
 }
+
 #contact-list li:hover .fa-twitter,
 article .share .twitter:hover {
-	color: #00ACEE;
-	border-color: #00ACEE;
+    color: #00ACEE;
+    border-color: #00ACEE;
 }
+
 #contact-list li:hover .fa-linkedin {
-	color: #1D87BD;
+    color: #1D87BD;
 }
+
 #contact-list li:hover .fa-envelope {
-	color: #E93E30;
+    color: #E93E30;
 }
+
 #contact-list li:hover .fa-pinterest {
-	color: #CC2127;
+    color: #CC2127;
 }
+
 #contact-list li:hover .fa-rss {
-	color: #e74c3c;
+    color: #e74c3c;
 }
+
 article .share .facebook:hover {
-	color: #43609C;
-	border-color: #43609C;
+    color: #43609C;
+    border-color: #43609C;
 }
+
 article .share .gplus:hover {
-	color: #C13929;
-	border-color: #C13929;
+    color: #C13929;
+    border-color: #C13929;
 }
 
 #contact-list-secondary {
-	padding-bottom: 10px;
+    padding-bottom: 10px;
 }
 
 .page-header {
-	color: #012456;
+    color: #012456;
 }
 
 @media only screen and (min-width: 768px) {
-    .page-header{
+    .page-header {
         margin-right: 70px;
     }
 }
 
-article{
-	margin-bottom: 40px;
+article {
+    margin-bottom: 40px;
 }
 
-.article_body{
-	margin-top: 20px;
-	margin-bottom: 20px;
+.article_body {
+    margin-top: 20px;
+    margin-bottom: 20px;
 }
 
 .post-date {
-	text-transform: uppercase;
-	font-size: 14px;
-	letter-spacing: 3px;
+    text-transform: uppercase;
+    font-size: 14px;
+    letter-spacing: 3px;
 }
 
 article {
-	padding: 0 5% 0;
+    padding: 0 5% 0;
 }
 
-article.home div a, article.home pre a { color: #2c3e50; }
-article.home div a:hover, article.home pre a:hover { color: #2c3e50; text-decoration: none; }
-article img { max-width: 100%; }
+article.home div a,
+article.home pre a {
+    color: #2c3e50;
+}
+
+article.home div a:hover,
+article.home pre a:hover {
+    color: #2c3e50;
+    text-decoration: none;
+}
+
+article img {
+    max-width: 100%;
+}
 
 article.home h1,
 article.home h2,
@@ -163,34 +197,37 @@ article.home h3,
 article.home h4,
 article.home h5,
 article.home h6 {
-	font-family: 'Raleway', sans-serif;
-	color: #f2756a;
+    font-family: 'Raleway', sans-serif;
+    color: #f2756a;
 }
 
 article.home h1 a,
 article.home h2 a,
 article.home h3 a,
 article.home h4 a {
-	color: #012456;
+    color: #012456;
 }
+
 article.home h1 a:hover,
 article.home h2 a:hover,
 article.home h3 a:hover,
 article.home h4 a:hover {
-	color: #e74c3c;
+    color: #e74c3c;
 }
 
 .author .author-image {
-  float: left;
-  margin-right: 20px;
+    float: left;
+    margin-right: 20px;
 }
 
 footer {
-	padding-top: 15px;
-	font-family: 'Raleway', sans-serif;
+    padding-top: 15px;
+    font-family: 'Raleway', sans-serif;
 }
 
+
 /* nav-vertical-tabs component */
+
 .nav-tabs-vertical {
     border-right: 1px solid #ddd;
 }
@@ -199,7 +236,9 @@ footer {
     margin-right: -1px;
 }
 
-.nav-tabs-vertical>li.active>a, .nav-tabs-vertical>li.active>a:hover, .nav-tabs-vertical>li.active>a:focus {
+.nav-tabs-vertical>li.active>a,
+.nav-tabs-vertical>li.active>a:hover,
+.nav-tabs-vertical>li.active>a:focus {
     color: #555;
     cursor: default;
     background-color: #fff;
@@ -213,14 +252,17 @@ footer {
     border-radius: 4px 0 0 4px;
 }
 
-.badge { background: #F2756A; }
+.badge {
+    background: #F2756A;
+}
 
-#nav-menu{
+#nav-menu {
     position: fixed;
     top: 45px;
     right: 45px;
     z-index: 2000;
 }
+
 #nav-menu .dropdown-menu {
     left: inherit;
     right: 0px;
