--- a/assets/resources/syntax/syntax.css
+++ b/assets/resources/syntax/syntax.css
@@ -3,13 +3,15 @@ pre.highlight,
 {
     background-color: #012456;
     color: #f5f5f5;
-    font-family: "Source Code Pro","Consolas","Menlo","Monaco","Bitstream Vera Sans Mono","monospace";
+    font-family: "Consolas","Menlo","Monaco","Bitstream Vera Sans Mono","monospace";
+    font-size: 13px;
     overflow-x: auto;
 }
 
 code		
 {
-    font-family: "Source Code Pro","Consolas","Menlo","Monaco","Bitstream Vera Sans Mono","monospace";
+    font-family: "Consolas","Menlo","Monaco","Bitstream Vera Sans Mono","monospace";
+    font-size: 13px;
     background: #f0f2f1;	
     color: #00529b;		
     padding: 1px 5px;		
