Update link color

--- a/_sass/base/_variables.scss
+++ b/_sass/base/_variables.scss
@@ -23,5 +23,6 @@ $border-color: rgba(#000, .1);
 
 // typography colors.
 $text-color: #383838;
-$link-color: darken($brand-color, 40%);
+//$link-color: darken($brand-color, 40%);
+$link-color: #012456;
 $blockquote-color: #777;
